--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
         "@types/marked": "^4.0.7",
         "codemirror": "^5.65.15",
         "codemirror-spell-checker": "1.1.2",
-        "marked": "^4.1.0"
+        "marked": "^4.1.0",
+        "prettier": "^3.4.2"
     },
     "devDependencies": {
         "browserify": "^17.0.0",
         "cypress": "^13.2.0",
         "eslint": "^8.50.0",
         "eslint-plugin-cypress": "^2.15.1",
-        "gulp": "^4.0.2",
+        "gulp": "^5.0.0",
         "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
         "gulp-eslint": "^6.0.0",
-        "gulp-header": "^2.0.9",
+        "gulp-header": "^1.8.9",
         "gulp-rename": "^2.0.0",
         "gulp-terser": "^2.1.0",
         "gulp-uglify": "^3.0.2",
