--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "gulp-rename": "^2.0.0",
         "gulp-terser": "^2.1.0",
         "gulp-uglify": "^3.0.2",
+        "gulp-util": "^1.0.0",
         "typescript": "^5.2.2",
         "vinyl-buffer": "^1.0.1",
         "vinyl-source-stream": "^2.0.0"
