--- a/package.json
+++ b/package.json
@@ -32,22 +32,13 @@
         "cypress": "^13.2.0",
         "eslint": "^8.50.0",
         "eslint-plugin-cypress": "^2.15.1",
-        "gulp": "^5.0.0",
-        "gulp-clean-css": "^4.3.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-eslint": "^6.0.0",
-        "gulp-header": "^1.8.9",
-        "gulp-rename": "^2.0.0",
-        "gulp-terser": "^2.1.0",
-        "gulp-uglify": "^3.0.2",
-        "gulp-util": "^1.0.0",
         "typescript": "^5.2.2",
         "vinyl-buffer": "^1.0.1",
         "vinyl-source-stream": "^2.0.0"
     },
     "repository": "github:Ionaru/easy-markdown-editor",
     "scripts": {
-        "prepare": "gulp",
+        "build": "node build.js",
         "test": "npm run lint && npm run test:types && npm run e2e",
         "lint": "gulp lint",
         "cypress:lint": "eslint cypress",
