--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     },
     "repository": "github:Ionaru/easy-markdown-editor",
     "scripts": {
-        "dev": "node bin/build.js --dev",
-        "build": "node bin/build.js",
+        "dev": "node ./bin/build.js --dev",
+        "build": "node ./bin/build.js",
+        "cypress:run": "cypress run",
         "prettier": "npx prettier --write .",
         "test": "npm run cypress:run && npm run test:types",
-        "cypress:run": "cypress run",
         "test:types": "tsc --project types/tsconfig.json"
     }
 }
