--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     },
     "repository": "github:Ionaru/easy-markdown-editor",
     "scripts": {
-        "dev": "node ./bin/build.js --dev",
-        "build": "node ./bin/build.js",
+        "dev": "node ./bin/build.mjs --dev",
+        "build": "node ./bin/build.mjs",
         "cypress:run": "cypress run",
         "prettier": "npx prettier --write .",
         "test": "npm run cypress:run && npm run test:types",
