--- a/.github/workflows/code_style.yaml
+++ b/.github/workflows/code_style.yaml
@@ -8,23 +8,19 @@ on:
 jobs:
   fix-code-style:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
       - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '23'
+        uses: actions/setup-node@v2
+      - name: Install dependencies
+        run: npm ci
       - name: Run Prettier
         run: npm run prettier
       - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: >
             chore: fix code style
